# music-tools

./: .gitignore  Cargo.toml  README.MD  flake.nix  shell.nix
src/: lib.rs  mpd.rs  playlist.rs  track.rs  tracksfile.rs
src/playcount/: entry.rs  mod.rs
src/playlist/: mod.rs  track.rs  tui_picker.rs
src/widgets/: mod.rs  track_info.rs  tui_picker.rs
tools/: flake.nix
