[package]
name = "music-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
camino = "1.1.6"
chrono = "0.4.38"
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
crossterm = "0.28.1"
dirs = "5.0.1"
id3 = ">=1.12.0, <1.15.0"
log = "0.4.20"
mpd = "0.1.0"
rand = "0.8.5"
ratatui = "0.29.0"
regex = "1.10.5"
stderrlog = "0.6.0"
walkdir = "2.5.0"
