[package]
name = "music-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
camino = "1.1.6"
chrono = "0.4.38"
clap = { version = "4.5.1", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.29.0"
dirs = "6.0.0"
id3 = ">=1.16.2"
log = "0.4.20"
midly = "0.5.3"
mpd = "0.1.0"
rand = "0.9.2"
ratatui = "0.30.0"
regex = "1.10.5"
stderrlog = "0.6.0"
walkdir = "2.5.0"
